dulwich (0.7.0-3) UNRELEASED; urgency=low

  * Add missing Breaks: field to python-dulwich.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Mar 2011 04:26:27 +0100

dulwich (0.7.0-2) unstable; urgency=low

  * Switch to dh_python2.

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 07 Mar 2011 03:19:45 +0100

dulwich (0.7.0-1) unstable; urgency=low

  * New upstream release.
   + Changes default test runner from nose to testtools.
  * Drop Pure- from the description.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 21 Jan 2011 19:38:13 +0100

dulwich (0.6.2+bzr702-1) unstable; urgency=low

  * Recommend python-fastimport. Closes: #600392
  * New upstream snapshot.

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 06 Nov 2010 22:56:35 +0100

dulwich (0.6.2-1) unstable; urgency=low

  * Build older versions of Python modules as well. Closes: #593751
  * New upstream release.

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 16 Oct 2010 19:49:12 +0200

dulwich (0.6.1-1) unstable; urgency=low

  * New upstream release.
  * Bump standards version to 3.9.1.

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 30 Jul 2010 13:22:11 +0200

dulwich (0.6.0-5) unstable; urgency=low

  * Support building on older platforms that still have C Git as git-
    core.
  * Avoid use of versioned shebang lines. Thanks Stefano Rivera. Closes:
    #587362

 -- Jelmer Vernooij <jelmer@debian.org>  Tue, 20 Jul 2010 16:27:44 +0200

dulwich (0.6.0-4) unstable; urgency=low

  * Switch to python-support. Closes: #583114

 -- Jelmer Vernooij <jelmer@debian.org>  Sun, 30 May 2010 20:12:30 +0200

dulwich (0.6.0-3) unstable; urgency=low

  * Clean up properly in clean target. Closes: #583130
  * Rebuild with proper version of pycentral. Closes: #583114

 -- Jelmer Vernooij <jelmer@debian.org>  Fri, 28 May 2010 03:17:32 +0200

dulwich (0.6.0-2) unstable; urgency=high

  * Add dependency on git, required for the testsuite. Closes: #582740

 -- Jelmer Vernooij <jelmer@debian.org>  Mon, 24 May 2010 16:13:32 +0200
